5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1638_2731.log
== TEST (2019-04-09 10:16:22) 
-- CODE:
ca = float(input("Coeficiente a:"))
cb= float(input("Coeficiente b"))
r = float(input("Raio"))

c = r**2 - (x-ca)**2 + (y - cb)**2 
	
if(c>0):
	print("Superiores")
else:
	print("inferiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = r**2 - (x-ca)**2 + (y - cb)**2 
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:17:37) 
-- CODE:
ca = float(input("Coeficiente a:"))
cb= float(input("Coeficiente b"))
r = float(input("Raio"))

c = r**2 - (ca)**2 + (cb)**2 
	
if(c>0):
	print("Superiores")
else:
	print("inferiores")
-- OUTPUT:
inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:18:12) 
-- CODE:
ca = float(input("Coeficiente a:"))
cb= float(input("Coeficiente b"))
r = float(input("Raio:"))

c = r**2 - (ca)**2 + (cb)**2 
	
if(c>0):
	print("Inferiores")
else:
	print("Superiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:18:17) 
-- CODE:
ca = float(input("Coeficiente a:"))
cb= float(input("Coeficiente b"))
r = float(input("Raio:"))

c = r**2 - (ca)**2 + (cb)**2 
	
if(c>0):
	print("Inferiores")
else:
	print("Superiores")
-- EXECUTION TIME:
0.185435
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:27:26) 
-- CODE:
ca = float(input("Coeficiente a:"))
cb= float(input("Coeficiente b"))
r = float(input("Raio:"))

	
if(cb>0):
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.204434
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
